@@ -1,6 +1,9 @@
 rebuildd (0.2.0) UNRELEASED; urgency=low
 
   * Stock builder hostname in job table
+  * Add new max_jobs config var, used to load max_jobs new jobs
+    This adds a new state WAIT_LOCKED for locking jobs handled by a build.
+  * Handle SIGINT like SIGTERM
 
  -- Julien Danjou <acid@debian.org>  Tue, 10 Jul 2007 10:36:33 +0200
 
